--- a/wellwise.html
+++ b/wellwise.html
@@ -28,29 +28,35 @@
     </header>
     <main>
         <div>
-            <h1>What is WellWise?</h1>
+            <h1>My Work</h1>
+            <h2>WellWise</h2>
+            <picture>
+                <source srcset="img/wellwiselogo1-1x.png" media="max-width: 300px">
+                <img src="img/wellwiselogo1-2x.png" alt="Wellwise Logo Circle" class="wellwise-circle-logo">
+            </picture>
+            <h4>What is WellWise?</h4>
             <p> WellWise is an education app that enables users to discover credible health content featuring real
                 testimonials
                 from individuals who have transformed their health, advice from experts, and articles to stay informed
                 on the latest trends and evidence-based insights. The app safely secures user’s health data to track
                 their progress with industry-standard security and curates personalized supplements and natural health
                 solutions based on the user’s needs and goals.</p>
-            <h3> My Role</h3>
+            <h4> My Role</h4>
             <p> UX Designer</p>
-            <h3> Project Duration</h3>
+            <h4> Project Duration</h4>
             <p> March-December 2024</p>
-            <h3> The Problem</h3>
+            <h4> The Problem</h4>
             <p>In today’s fast-paced world, many individuals are seeking effective ways to improve their health and
                 wellness, but often find themselves overwhelmed by the abundance of information and lack of personalized
                 guidance. Traditional medical approaches frequently emphasize pharmaceutical solutions, which may not
                 address the root causes of health issues or align with individuals' preferences for natural, holistic
                 methods.</p>
-            <h3> Objective</h3>
+            <h4> Objective</h4>
             <p> By providing an educational health hub with credible information and personalized natural health
                 solutions that address the challenges of online information overload, individuals can take better care
                 of their physical and mental health naturally.</p>
-            <h2> Design Process</h2>
-            <h3> Discover</h3>
+            <h3> Design Process</h3>
+            <h4> Discover</h4>
             <p> In the discovery phase, I focused on understanding the problem and gathering insights about users and
                 the competitive landscape:
                 User Surveys: Gathered attitudinal data to understand user perceptions, behaviors, and needs at scale.
@@ -58,7 +64,7 @@
                 Competitive Analysis: Examined existing health apps and natural health education platforms to understand
                 market gaps, strengths, and opportunities.
                 This stage helped me empathize with users and set a foundation for further exploration.</p>
-            <h3>Define</h3>
+            <h4>Define</h4>
             <p> Here, I synthesized the research findings to clearly articulate user needs and define the problem:
                 Affinity Mapping: Organized and categorized qualitative and quantitative data into patterns, helping
                 identify common themes and insights.
@@ -70,9 +76,9 @@
             </picture>
             <picture>
                 <source srcset="img/userpersonajd-1x.png" media="max-width: 767px">
-                <img src="img/userpersonajd-2x.png" slt="J Davis Persona">
+                <img src="img/userpersonajd-2x.png" alt="J Davis Persona">
             </picture>
-            <h3>Ideate</h3>
+            <h4>Ideate</h4>
             <p>In the ideation phase, I explored potential solutions to address user needs:
                 Brainstorming and Sketching: I first generated a variety of ideas for the app.
                 User Journey Maps: I mapped out the user experience across different touchpoints to understand user
@@ -88,7 +94,7 @@
                 <source srcset="img/userflow2-1x.png" media="max-width: 767px">
                 <img src="img/userflow2-2x.png" alt="User Flow 2">
             </picture>
-            <h3>Design</h3>
+            <h4>Design</h4>
             <p> Next, I translated my ideas into hand drawn sketched and iterated on potential solutions:
                 Developed low and mid-fidelity wireframes for layout and basic functionality.
                 From there, I created high-fidelity prototypes with detailed design systems for usability and visual
@@ -108,13 +114,13 @@
                 <img src="img/highfid_signup-2x.jpg" alt="High Fidelity Wireframe">
             </picture>
 
-            <h3>Test</h3>
+            <h4>Test</h4>
             <p> I conducted usability testing to validate my designs and identify areas for improvement. Testing ensured
                 that my solution addressed user needs effectively.
                 I collected feedback through methods like usability tests and preference tests.
                 Analyzed user responses to pinpoint pain points or friction in the design, organizing the data with
                 methods like the rainbow spreadsheet. </p>
-            <h3>Refine</h3>
+            <h4>Refine</h4>
             <p>Based on testing feedback, I refined my design to enhance usability, functionality, and user
                 satisfaction:
                 I iterated my wireframes or prototypes to fix issues and incorporate insights from usability testing.
@@ -126,19 +132,18 @@
     </main>
     <footer>
         <div>
-            <h2>Get in Touch</h2>
+            <h3>Get in Touch</h3>
             <p>
-                Do you like my work and want to discuss opportunities? Please get in touch. Call: <a
-                    href="tel:+1 3036563518"> +1 3036563518</a> Prefer sending an email?
+                Do you like my work and want to discuss opportunities? Please get in touch. 
+                Call: <a href="tel:+1 3036563518"> +1 3036563518</a> Prefer sending an email?
             </p>
             <div>
                 <a href="mailto:miasmckay0@gmail.com">Email me</a>
             </div>
             <div>
                 <!--Social Media Layout Placeholders-->
-                <a href="https://www.linkedin.com/in/miamckay11/" target="blank">
-                    <svg height="100%"
-                        style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"
+                <a href="https://www.linkedin.com/in/miamckay11/"> target="blank">
+                    <svg height="100%" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"
                         version="1.1" viewBox="0 0 512 512" width="100%" xml:space="preserve"
                         xmlns="http://www.w3.org/2000/svg" xmlns:serif="http://www.serif.com/"
                         xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -158,10 +163,10 @@
                             </g>
                         </g>
                     </svg>
+                </div>
             </div>
             <p>Copyright MIA-MCKAY 2020</p>
         </div>
     </footer>
 </body>
-
 </html>
