added js script

--- a/about.html
+++ b/about.html
@@ -123,6 +123,6 @@
         </div>
         <p>Copyright MIA-MCKAY 2020</p>
     </footer>
+<script src="js/scripts.js"></script>
 </body>
-
 </html>
