--- a/index.html
+++ b/index.html
@@ -113,6 +113,6 @@
             <p>Copyright MIA-MCKAY 2020</p>
         </div>
     </footer>
+<script src="js/scripts.js"></script>
 </body>
-
 </html>
