--- a/wellwise.html
+++ b/wellwise.html
@@ -168,5 +168,6 @@
             <p>Copyright MIA-MCKAY 2020</p>
         </div>
     </footer>
+<script src="js/scripts.js"></script>
 </body>
 </html>
