--- a/wellwise.html
+++ b/wellwise.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>WellWise Project</title>
     <link rel= "stylesheet" href= "css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:300;400;700" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/ac3a6ab821.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -168,6 +170,7 @@
             <p>Copyright MIA-MCKAY 2020</p>
         </div>
     </footer>
+<script src="js/jquery-3.3.1.min.js"></script>
 <script src="js/scripts.js"></script>
 </body>
 </html>
