--- a/index.html
+++ b/index.html
@@ -42,18 +42,16 @@
     </header>
 
     <main>
-        <div>
-            <div>
-                <div id="hero">
+        <div class="container">
+            <div id="hero">
+                <div class="row">
                     <div class="row">
-                        <div class="col-md-6 col-lg-7">
+                        <div class="col-2">
                             <h1>Hi, I'm Mia Mckay!</h1>
                             <p>I am a UX Designer passionate about creating intuitive and impactful designs that empower
                                 people.</p>
                         </div>
-                        <div>
-                            <div>
-                                <div class="container">
+                        <div class="col-2">
                                     <picture>
                                         <source srcset="img/myphoto-1x.png" media="(max-width:767px)">
                                         <img src="img/myphoto-2x.png" alt="My Photo">
@@ -61,10 +59,8 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div>
 
-                <div class="row">
+                    <div class="row">
                     <div class="col-2">
                         <h3>My Work</h3>
                         <p>WellWise is a responsive web app designed to empower users with credible, evidence-based
@@ -79,12 +75,11 @@
                         <div class="project-svg">
                             <svg xmlns="http://www.w3.org/2000/svg" width="400" height="400" viewBox="0 0 400 400">
                                 <rect width="100%" height="100%" fill="lightblue" />
-                                <image x="50" y="50" width="300" height="300"
-                                    href="https://img.freepik.com/free-vector/winter-concept-hand-drawn_23-2148352418.jpg?semt=ais_hybrid" />
+                                <image x="50" y="50" width="300" height="300" href="https://img.freepik.com/free-vector/winter-concept-hand-drawn_23-2148352418.jpg?semt=ais_hybrid" />
                             </svg>
                         </div>
                     </div>
-                </div>
+                </div> 
             </div>
         </div>
     </main>
@@ -94,17 +89,14 @@
             <div class="container">
                 <h2>Get in Touch</h2>
                 <p>Do you like my work and want to discuss opportunities? Please get in touch. Call:
-                    <a href="tel:+1 3036563518"> +1 3036563518</a> Prefer sending an email?
-                </p>
+                    <a href="tel:+1 3036563518"> +1 3036563518</a> Prefer sending an email?</p>
                 <div>
                     <a href="mailto:miasmckay0@gmail.com">Email me</a>
                 </div>
-
                 <a href="LINKEDIN_URL" target="blank">
                     <svg height="100%"
                         style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"
-                        version="1.1" viewBox="0 0 512 512" width="100%" xml:space="preserve"
-                        xmlns="http://www.w3.org/2000/svg">
+                        version="1.1" viewBox="0 0 512 512" width="100%" xml:space="preserve"xmlns="http://www.w3.org/2000/svg">
                         <g id="g5891">
                             <path
                                 d="M512,64c0,-35.323 -28.677,-64 -64,-64l-384,0c-35.323,0 -64,28.677 -64,64l0,384c0,35.323 28.677,64 64,64l384,0c35.323,0 64,-28.677 64,-64l0,-384Z"
@@ -126,6 +118,7 @@
             <p>Copyright MIA-MCKAY 2020</p>
         </div>
     </footer>
+
     <script
         src="https://code.jquery.com/jquery-3.7.1.min.js"> integrity = "sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin = "anonymous" ></script>
     <script src="js/scripts.js"></script>
