--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@
             <div class="container">
                 <h2>Get in Touch</h2>
                 <p>Do you like my work and want to discuss opportunities? Please get in touch. Call:
-                    <a href="tel:+1 3036563518"> +1 3036563518</a> Prefer sending an email?</p>
+                    <a href="tel:+13036563518"> +1 3036563518</a> Prefer sending an email?</p>
                 <div>
                     <a href="mailto:miasmckay0@gmail.com">Email me</a>
                 </div>
                 <a href="LINKEDIN_URL" target="blank">
                     <svg height="100%"
                         style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;"
-                        version="1.1" viewBox="0 0 512 512" width="100%" xml:space="preserve"xmlns="http://www.w3.org/2000/svg">
+                        version="1.1" viewBox="0 0 512 512" width="100%" xml:space="preserve" xmlns="http://www.w3.org/2000/svg">
                         <g id="g5891">
                             <path
                                 d="M512,64c0,-35.323 -28.677,-64 -64,-64l-384,0c-35.323,0 -64,28.677 -64,64l0,384c0,35.323 28.677,64 64,64l384,0c35.323,0 64,-28.677 64,-64l0,-384Z"
@@ -120,7 +120,7 @@
     </footer>
 
     <script
-        src="https://code.jquery.com/jquery-3.7.1.min.js"> integrity = "sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin = "anonymous" ></script>
+        src="https://code.jquery.com/jquery-3.7.1.min.js"> integrity = "sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin ="anonymous"></script>
     <script src="js/scripts.js"></script>
 </body>
 
