made col-lg-5.. equal to 12

--- a/index.html
+++ b/index.html
@@ -48,12 +48,11 @@
         <div class="container">
             <div id="hero">
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-lg-7">
                         <h1>Hi, I'm Mia Mckay!</h1>
-                        <p>I am a UX Designer passionate about creating intuitive and impactful designs that empower
-                            people.</p>
+                        <p>I am a UX Designer passionate about creating intuitive and impactful designs that empower people.</p>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-lg-5">
                         <picture>
                             <source srcset="img/myphoto-1x.png" media="(max-width:767px)">
                             <img src="img/myphoto-2x.png" alt="My Photo">
