align both project names on right side

--- a/index.html
+++ b/index.html
@@ -83,7 +83,6 @@
         </div>
         <div class="row">
             <div class="col-md-6 col-lg-7">
-                <h3>Second Project</h3>
                 <svg id="about-picture" xmlns="http://www.w3.org/2000/svg" class="berlin-illustration" height="auto"
                     viewBox="0 0 700 505" xmlns:xlink="http://www.w3.org/1999/xlink">
                     <defs>
@@ -1532,7 +1531,9 @@
                         </path>
                     </g>
                 </svg>
+                </div>
                 <div class="col-md-6 col-lg-5">
+                    <h3>Second Project</h3>
                 </div>
             </div>
         </div>
