created button class and css button styling

--- a/about.html
+++ b/about.html
@@ -56,7 +56,8 @@
                     </p>
                 </div>
                 <div>
-                    <a href="files/mia.mckay.resume.pdf">My Resume</a>
+                    <a href="files/mia.mckay.resume.pdf" class="resume-button">My Resume</a>
+                    </div>
                 </div>
 
                 <!-- Skills and Tools Section with 2 columns -->
@@ -96,7 +97,7 @@
                 <a href="tel:+13036563518"> +1 3036563518</a> Prefer sending an email?
             </p>
             <div>
-                <a href="mailto:miasmckay0@gmail.com">Email me</a>
+                <a href="mailto:miasmckay0@gmail.com" class="email-button">Email me</a>
             </div>
             <a href="LINKEDIN_URL" target="blank">
                 <svg class="social-icon" height="100%"
