--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
                 <div class="row">
                     <div class="col-md-6 col-lg-7">
                         <h1>Hi, I'm Mia Mckay!</h1>
-                        <p>I am a UX Designer passionate about creating intuitive and impactful designs that empower people.</p>
+                        <p>I am a UX Designer passionate about creating intuitive and impactful designs that empower
+                            people.</p>
                     </div>
                     <div class="col-md-6 col-lg-5">
                         <picture>
@@ -71,13 +72,15 @@
                     </picture>
                 </div>
                 <div class="col-md-6 col-lg-7">
-                    <h3>WellWise</h3>
-                    <p>WellWise is a responsive web app designed to empower users with credible, evidence-based
-                        natural health information and personalized tools to improve their well-being. The app helps
-                        users stay informed about the latest trends, securely store users’ health data with
-                        industry-standard security measures, and enables users to track their progress and curate a
-                        personalized health plan tailored to their unique needs and goals.</p>
-                    <a href="wellwise.html">Read More</a>
+                    <div class="project-title">
+                        <h3>WellWise</h3>
+                        <p>WellWise is a responsive web app designed to empower users with credible, evidence-based
+                            natural health information and personalized tools to improve their well-being. The app helps
+                            users stay informed about the latest trends, securely store users’ health data with
+                            industry-standard security measures, and enables users to track their progress and curate a
+                            personalized health plan tailored to their unique needs and goals.</p>
+                        <a href="wellwise.html" class="read-more-button">Read More</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -1531,8 +1534,9 @@
                         </path>
                     </g>
                 </svg>
-                </div>
-                <div class="col-md-6 col-lg-5">
+            </div>
+            <div class="col-md-6 col-lg-5">
+                <div class="project-title">
                     <h3>Second Project</h3>
                 </div>
             </div>
@@ -1546,7 +1550,7 @@
                 <a href="tel:+13036563518"> +1 3036563518</a> Prefer sending an email?
             </p>
             <div>
-                <a href="mailto:miasmckay0@gmail.com">Email me</a>
+                <a href="mailto:miasmckay0@gmail.com" class="email-button">Email me</a>
             </div>
             <a href="LINKEDIN_URL" target="blank">
                 <svg class="social-icon" height="100%"
