--- a/wellwise.html
+++ b/wellwise.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Short description">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>WellWise Project</title>
-    <link rel= "stylesheet" href= "css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Lato:300;400;700" rel="stylesheet">
     <script src="https://kit.fontawesome.com/ac3a6ab821.js" crossorigin="anonymous"></script>
 </head>
@@ -29,108 +29,122 @@
         </div>
     </header>
     <main>
-        <div>
-            <h1>My Work</h1>
-            <h2>WellWise</h2>
-            <picture>
-                <source srcset="img/wellwiselogo1-1x.png" media="max-width: 300px">
-                <img src="img/wellwiselogo1-2x.png" alt="Wellwise Logo Circle" class="wellwise-circle-logo">
-            </picture>
-            <h4>What is WellWise?</h4>
-            <p> WellWise is an education app that enables users to discover credible health content featuring real
-                testimonials
-                from individuals who have transformed their health, advice from experts, and articles to stay informed
-                on the latest trends and evidence-based insights. The app safely secures user’s health data to track
-                their progress with industry-standard security and curates personalized supplements and natural health
-                solutions based on the user’s needs and goals.</p>
-            <h4> My Role</h4>
-            <p> UX Designer</p>
-            <h4> Project Duration</h4>
-            <p> March-December 2024</p>
-            <h4> The Problem</h4>
-            <p>In today’s fast-paced world, many individuals are seeking effective ways to improve their health and
-                wellness, but often find themselves overwhelmed by the abundance of information and lack of personalized
-                guidance. Traditional medical approaches frequently emphasize pharmaceutical solutions, which may not
-                address the root causes of health issues or align with individuals' preferences for natural, holistic
-                methods.</p>
-            <h4> Objective</h4>
-            <p> By providing an educational health hub with credible information and personalized natural health
-                solutions that address the challenges of online information overload, individuals can take better care
-                of their physical and mental health naturally.</p>
-            <h3> Design Process</h3>
-            <h4> Discover</h4>
-            <p> In the discovery phase, I focused on understanding the problem and gathering insights about users and
-                the competitive landscape:
-                User Surveys: Gathered attitudinal data to understand user perceptions, behaviors, and needs at scale.
-                User Interviews: Collected qualitative insights to dive deeper into user motivations and pain points.
-                Competitive Analysis: Examined existing health apps and natural health education platforms to understand
-                market gaps, strengths, and opportunities.
-                This stage helped me empathize with users and set a foundation for further exploration.</p>
-            <h4>Define</h4>
-            <p> Here, I synthesized the research findings to clearly articulate user needs and define the problem:
-                Affinity Mapping: Organized and categorized qualitative and quantitative data into patterns, helping
-                identify common themes and insights.
-                User Personas: Created detailed personas to humanize your target users, providing a clear understanding
-                of their goals, frustrations, and behaviors. </p>
-            <picture>
-                <source srcset="img/userpersonaar-1x.png" media="max-width: 767px">
-                <img src="img/userpersonaar-2x.png" alt="Annie Rissman Persona">
-            </picture>
-            <picture>
-                <source srcset="img/userpersonajd-1x.png" media="max-width: 767px">
-                <img src="img/userpersonajd-2x.png" alt="J Davis Persona">
-            </picture>
-            <h4>Ideate</h4>
-            <p>In the ideation phase, I explored potential solutions to address user needs:
-                Brainstorming and Sketching: I first generated a variety of ideas for the app.
-                User Journey Maps: I mapped out the user experience across different touchpoints to understand user
-                emotions, pain points, and opportunities.
-                User Flows: I designed user flows to illustrate how users would navigate through the app to achieve
-                specific tasks.
-                Site Maps: I created a site map to structure the app and ensure intuitive navigation.</p>
-            <picture>
-                <source srcset="img/userflow1-1x.png" media="max-width: 767px">
-                <img src="img/userflow1-2x.png" alt="User Flow 1">
-            </picture>
-            <picture>
-                <source srcset="img/userflow2-1x.png" media="max-width: 767px">
-                <img src="img/userflow2-2x.png" alt="User Flow 2">
-            </picture>
-            <h4>Design</h4>
-            <p> Next, I translated my ideas into hand drawn sketched and iterated on potential solutions:
-                Developed low and mid-fidelity wireframes for layout and basic functionality.
-                From there, I created high-fidelity prototypes with detailed design systems for usability and visual
-                appeal. </p>
-            <picture>
-                <source srcset="img/lowfid_uploadphysician'sreports-1x.png" media="max-width: 767px">
-                <img src="img/lowfid_uploadphysician'sreports-2x.png" alt="Low Fidelity Wireframe">
-            </picture>
+        <div class="container">
+            <div>
+                <h1>My Work</h1>
+                <h2>WellWise</h2>
+                <picture>
+                    <source srcset="img/wellwiselogo1-1x.png" media="max-width: 300px">
+                    <img src="img/wellwiselogo1-2x.png" alt="Wellwise Logo Circle" class="wellwise-circle-logo">
+                </picture>
+                <h4>What is WellWise?</h4>
+                <p> WellWise is an educational app that enables users to discover credible health content featuring real
+                    testimonials from individuals who have transformed their health, advice from experts, and articles
+                    to stay informed
+                    on the latest trends and evidence-based insights. The app safely secures user’s health data to track
+                    their progress with industry-standard security and curates personalized supplements and natural
+                    health
+                    solutions based on the user’s needs and goals.</p>
+                <h4> My Role</h4>
+                <p> UX Designer</p>
+                <h4> Project Duration</h4>
+                <p> March-December 2024</p>
+                <h4> The Problem</h4>
+                <p>In today’s fast-paced world, many individuals are seeking effective ways to improve their health and
+                    wellness, but often find themselves overwhelmed by the abundance of information and lack of
+                    personalized
+                    guidance. Traditional medical approaches frequently emphasize pharmaceutical solutions, which may
+                    not
+                    address the root causes of health issues or align with individuals' preferences for natural,
+                    holistic
+                    methods.</p>
+                <h4> Objective</h4>
+                <p> By providing an educational health hub with credible information and personalized natural health
+                    solutions that address the challenges of online information overload, individuals can take better
+                    care
+                    of their physical and mental health naturally.</p>
+                <h3> Design Process</h3>
+                <h4> Discover</h4>
+                <p> In the discovery phase, I focused on understanding the problem and gathering insights about users
+                    and
+                    the competitive landscape:
+                    User Surveys: Gathered attitudinal data to understand user perceptions, behaviors, and needs at
+                    scale.
+                    User Interviews: Collected qualitative insights to dive deeper into user motivations and pain
+                    points.
+                    Competitive Analysis: Examined existing health apps and natural health education platforms to
+                    understand
+                    market gaps, strengths, and opportunities.
+                    This stage helped me empathize with users and set a foundation for further exploration.</p>
+                <h4>Define</h4>
+                <p> Here, I synthesized the research findings to clearly articulate user needs and define the problem:
+                    Affinity Mapping: Organized and categorized qualitative and quantitative data into patterns, helping
+                    identify common themes and insights.
+                    User Personas: Created detailed personas to humanize your target users, providing a clear
+                    understanding
+                    of their goals, frustrations, and behaviors. </p>
+                <picture>
+                    <source srcset="img/userpersonaar-1x.png" media="max-width: 767px">
+                    <img src="img/userpersonaar-2x.png" alt="Annie Rissman Persona">
+                </picture>
+                <picture>
+                    <source srcset="img/userpersonajd-1x.png" media="max-width: 767px">
+                    <img src="img/userpersonajd-2x.png" alt="J Davis Persona">
+                </picture>
+                <h4>Ideate</h4>
+                <p>In the ideation phase, I explored potential solutions to address user needs:
+                    Brainstorming and Sketching: I first generated a variety of ideas for the app.
+                    User Journey Maps: I mapped out the user experience across different touchpoints to understand user
+                    emotions, pain points, and opportunities.
+                    User Flows: I designed user flows to illustrate how users would navigate through the app to achieve
+                    specific tasks.
+                    Site Maps: I created a site map to structure the app and ensure intuitive navigation.</p>
+                <picture>
+                    <source srcset="img/userflow1-1x.png" media="max-width: 767px">
+                    <img src="img/userflow1-2x.png" alt="User Flow 1">
+                </picture>
+                <picture>
+                    <source srcset="img/userflow2-1x.png" media="max-width: 767px">
+                    <img src="img/userflow2-2x.png" alt="User Flow 2">
+                </picture>
+                <h4>Design</h4>
+                <p> Next, I translated my ideas into hand drawn sketched and iterated on potential solutions:
+                    Developed low and mid-fidelity wireframes for layout and basic functionality.
+                    From there, I created high-fidelity prototypes with detailed design systems for usability and visual
+                    appeal. </p>
+                <picture>
+                    <source srcset="img/lowfid_uploadphysician'sreports-1x.png" media="max-width: 767px">
+                    <img src="img/lowfid_uploadphysician'sreports-2x.png" alt="Low Fidelity Wireframe">
+                </picture>
 
-            <picture>
-                <source srcset="img/midfid_setupprofile-1x.png" media="max-width: 767px">
-                <img src="img/midfid_setupprofile-2x.png" alt="Mid Fidelity Wireframe">
-            </picture>
+                <picture>
+                    <source srcset="img/midfid_setupprofile-1x.png" media="max-width: 767px">
+                    <img src="img/midfid_setupprofile-2x.png" alt="Mid Fidelity Wireframe">
+                </picture>
 
-            <picture>
-                <source srcset="img/highfid_signup-1x.png" media="max-width: 767px">
-                <img src="img/highfid_signup-2x.jpg" alt="High Fidelity Wireframe">
-            </picture>
+                <picture>
+                    <source srcset="img/highfid_signup-1x.png" media="max-width: 767px">
+                    <img src="img/highfid_signup-2x.jpg" alt="High Fidelity Wireframe">
+                </picture>
 
-            <h4>Test</h4>
-            <p> I conducted usability testing to validate my designs and identify areas for improvement. Testing ensured
-                that my solution addressed user needs effectively.
-                I collected feedback through methods like usability tests and preference tests.
-                Analyzed user responses to pinpoint pain points or friction in the design, organizing the data with
-                methods like the rainbow spreadsheet. </p>
-            <h4>Refine</h4>
-            <p>Based on testing feedback, I refined my design to enhance usability, functionality, and user
-                satisfaction:
-                I iterated my wireframes or prototypes to fix issues and incorporate insights from usability testing.
-                I then polished my designs to ensure it aligned with user expectations and business goals.</p>
-            <a
-                href="https://www.figma.com/design/KQbvBVvYrlNAbbQiTd8vWP/WellWise-Project?node-id=452-119&t=4gnipLtAyfpYkDII-0">Prototype
-                Link</a>
-        </div>
+                <h4>Test</h4>
+                <p> I conducted usability testing to validate my designs and identify areas for improvement. Testing
+                    ensured
+                    that my solution addressed user needs effectively.
+                    I collected feedback through methods like usability tests and preference tests.
+                    Analyzed user responses to pinpoint pain points or friction in the design, organizing the data with
+                    methods like the rainbow spreadsheet. </p>
+                <h4>Refine</h4>
+                <p>Based on testing feedback, I refined my design to enhance usability, functionality, and user
+                    satisfaction:
+                    I iterated my wireframes or prototypes to fix issues and incorporate insights from usability
+                    testing.
+                    I then polished my designs to ensure it aligned with user expectations and business goals.</p>
+                <a
+                    href="https://www.figma.com/design/KQbvBVvYrlNAbbQiTd8vWP/WellWise-Project?node-id=452-119&t=4gnipLtAyfpYkDII-0">Prototype
+                    Link</a>
+            </div>
+        </container>
     </main>
     <footer>
         <div class="container">
@@ -139,7 +153,7 @@
                 <a href="tel:+13036563518"> +1 3036563518</a> Prefer sending an email?
             </p>
             <div>
-                <a href="mailto:miasmckay0@gmail.com">Email me</a>
+                <a href="mailto:miasmckay0@gmail.com" class="email-button">Email me</a>
             </div>
             <a href="LINKEDIN_URL" target="blank">
                 <svg class="social-icon" height="100%"
